--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -101,6 +101,7 @@ input {
   border: none;
   border-image: initial;
   font-size: 20px;
+  text-overflow: ellipsis;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
