--- a/src/pages/home/index.css
+++ b/src/pages/home/index.css
@@ -273,7 +273,9 @@ input::-webkit-input-placeholder {
 }
 
 .bottomInfo2 > div {
-  font-size: 25px;
+  font: normal normal 900 25px/34px Avenir;
+  letter-spacing: 0px;
+  color: #ffffff;
 }
 
 a {
